Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61277

Doc: Some modules missing from "All QML Modules" page

    XMLWordPrintable

Details

    • 8
    • 5ddab1860 (dev)
    • Foundation Sprint 109, Foundation Sprint 110

    Description

      QtQuick.LocalStorage and Qt.labs.sharedimage are missing from http://doc.qt.io/qt-5/modules-qml.html

      I have tracked the issue down to QDocDatabase::mergeCollections(Node::Genus genus, CNMap& cnm, const Node* relative) when called from HtmlGenerator::generateList() with genus==QML. It seems that for these modules, the test on (!n->members().isEmpty()) fails, so they do not get added to the function's result map (cnm).

      Attachments

        For Gerrit Dashboard: QTBUG-61277
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniö
            vgt Eirik Aavitsland
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change