qdoc: Remove unnecessary test when merging QML module nodes

Some documented QML modules, such as QtQuick.LocalStorage, do not
contain any member types. In case of LocalStorage, it exposes a
singleton type whose methods are documented directly on the
module page.

QDocDatabase::mergeCollections() implementation included a check for
whether the collection's list of members was empty. If it was, the
node was not included in the generated output e.g. via

  \generatelist modules-qml

Drop this check and requirement - allow generated lists to include
"empty" but documented modules.

Fixes: QTBUG-61277
Change-Id: Ia2106cb11b32df10bf4d559edfd8c2469fdbd9da
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 5ddab1860f6ee916a9df2d322e8b7e0da5ef72c3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ebc900c35d70f63c0e69b88e21662a91d0f08552)